syntax = "proto3";

package smartoffice;

// Service definition for SmartMeetingRooms
service SmartMeetingRooms {
    // Method to book a meeting room with updates
    rpc BookRoomWithUpdates(stream BookRoomRequest) returns (stream BookRoomResponse);

    // Method to get the list of booked meeting rooms
    rpc GetBookedRooms(Empty) returns (stream BookRoomResponse);

    // Method to cancel a booked meeting room
    rpc CancelBookedRoom(CancelBookedRoomRequest) returns (CancelBookedRoomResponse);
}

message BookRoomRequest {
    string roomId = 1;
    string startTime = 2;
    string endTime = 3;
    string organizer = 4;
}

message BookRoomResponse {
    string bookingId = 1;
    string status = 2;
}

message CancelBookedRoomRequest {
    string bookingId = 1;
}

message CancelBookedRoomResponse {
    string status = 1;
}

// Empty message used when no parameters are needed
message Empty {}
